--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,40 @@
-{\rtf1\ansi\ansicpg1251\cocoartf2821
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 \{\
-  "name": "NoComplaint",\
-  "short_name": "NoComplaint",\
-  "start_url": "./index.html",\
-  "display": "standalone",\
-  "background_color": "#121212",\
-  "theme_color": "#121212",\
-  "description": "21 Day No Complaint Challenge - Stop complaining and start celebrating progress!",\
-  "icons": [\
-    \{\
-      "src": "icons/icon-192x192.png",\
-      "sizes": "192x192",\
-      "type": "image/png"\
-    \},\
-    \{\
-      "src": "icons/icon-512x512.png",\
-      "sizes": "512x512",\
-      "type": "image/png"\
-    \}\
-  ]\
-\}\
+{
+  "name": "21 Days Without Complaints & Excuses Challenge",
+  "short_name": "No Complaints",
+  "description": "Challenge yourself to go 21 days without complaining or making excuses",
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#1a237e",
+  "theme_color": "#1a237e",
+  "orientation": "any",
+  "icons": [
+    {
+      "src": "icon 192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icon 512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ],
+  "categories": ["lifestyle", "health", "productivity"],
+  "screenshots": [],
+  "shortcuts": [
+    {
+      "name": "Start Challenge",
+      "short_name": "Start",
+      "description": "Start a new challenge",
+      "url": "index.html?action=start"
+    },
+    {
+      "name": "View Progress",
+      "short_name": "Progress",
+      "description": "View your current progress",
+      "url": "index.html?action=analysis"
+    }
+  ]
 }
